@@ -1184,3 +1184,6 @@ modifiers before the light/illum/glow primitive.
 
 Fixed bug in xform where it was neglecting to add transform arguments
 to new mesh primitive.
+
+Added -dF and -dD options to pvalue for byte-swapped floats and
+doubles, respectively.
